# ssNMR-fitting

./: README.md  formatting.py  paramagnetic_nmr_fitting.py  pyproject.toml
src/ssNMR/: __init__.py  fitNMR.py  fitting.py  requirements.txt
