[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ssnmr"
version = "1.1.0"
description = "A pythonic way to fit solid-state NMR spectra"
readme = "README.md"
authors = [{ name = "Vincent Wu", email = "vincentwu@berkeley.edu" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["NMR", "fit", "dmfit"]

dependencies = [
    "matplotlib >=3.0.0",
    "numpy>=1.0.0",
    "scipy>=1.0.0",
    "lmfit>=1.0.3",
    "pandas>=1.0.0",
    "seaborn"
]
requires-python = ">=3.6"

[project.optional-dependencies]
dev = []

[project.urls]
Homepage = "https://github.com/vince-wu/ssNMR-fitting"

